--- a/vacation-style.css
+++ b/vacation-style.css
@@ -1,93 +1,161 @@
 
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-body{
-   font-family: sans-serif;
-   text-align: center;  
+
+body {
+    font-family: sans-serif;
+    text-align: center;
 }
-h1{
+
+h1 {
     color: gray;
-    font-size: 80px;
+    font-size: 60px;
 }
-p{
-    font-size: 20px;
+
+p {
+    font-size: 18px;
     color: gray;
     margin-bottom: 10px;
-
 }
-.button{
+
+.button {
     padding: 10px 25px;
     margin-bottom: 10px;
     color: whitesmoke;
     background-color: gray;
     cursor: pointer;
-   
+    border: none;
+    font-size: 16px;
 }
-header{
-    background: linear-gradient(45deg,gray,lightgreen);
-    padding: 10px;
+
+header {
+    background: linear-gradient(45deg, gray, lightgreen);
+    padding: 15px;
 }
-header h1{
+
+header h1 {
     color: whitesmoke;
+    font-size: 40px;
 }
-nav{
+
+nav {
     background-color: lightgray;
-    /* font-size: 20px; */
     padding: 10px;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     color: black;
-    padding: 10px 25px;
+    padding: 10px 20px;
     display: inline-block;
+    font-size: 18px;
 }
-nav a:hover{
+
+nav a:hover {
     background-color: lightgreen;
-   
 }
-.home-section{
-    padding: 100px;
+
+.home-section {
+    padding: 80px;
 }
-.our-packages figure{
+
+.our-packages figure {
     box-shadow: 0 0 10px black;
-    width: 200px;
+    width: 90%;
+    max-width: 300px;
     display: inline-block;
     margin: 20px;
 }
-.our-packages figure img{
+
+.our-packages figure img {
     width: 100%;
-    
 }
-.our-packages figure figcaption{
-      font-size: 30px;
+
+.our-packages figure figcaption {
+    font-size: 20px;
 }
-.our-packages figure p{
-    font-size: 18px;
+
+.our-packages figure p {
+    font-size: 16px;
 }
-.main-footer{
+
+.main-footer {
     background-color: gray;
     color: whitesmoke;
     padding: 20px;
-    margin: 10px 25px;
-   
 }
-.our-gallery{
-    padding: 100px;
-    border: 6px solid black;
-  
+
+.our-gallery {
+    padding: 50px;
+    border: 4px solid black;
 }
-.our-gallery figure{
-      box-shadow: 0 0 10px black; 
-      width: 300px;
-      margin: 10px 20px;
-      display: inline-block;
+
+.our-gallery figure {
+    box-shadow: 0 0 10px black;
+    width: 90%;
+    max-width: 300px;
+    margin: 10px auto;
+    display: inline-block;
 }
-.our-gallery figure img{
-     width: 100%;
+
+.our-gallery figure img {
+    width: 100%;
 }
-.our-gallery figure figcaption{
-      padding: 5px 10px;
-      font-size: 10px;
+
+.our-gallery figure figcaption {
+    padding: 5px;
+    font-size: 14px;
+}
+
+/* Responsiveness */
+@media (max-width: 1024px) {
+    h1 {
+        font-size: 50px;
+    }
+    
+    .home-section {
+        padding: 50px;
+    }
+}
+
+@media (max-width: 768px) {
+    nav a {
+        display: block;
+        padding: 10px;
+        text-align: center;
+    }
+    
+    h1 {
+        font-size: 40px;
+    }
+    
+    .home-section {
+        padding: 40px;
+    }
+    
+    .our-packages figure {
+        width: 100%;
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 30px;
+    }
+    
+    p {
+        font-size: 16px;
+    }
+    
+    .home-section {
+        padding: 30px;
+    }
+    
+    .our-gallery {
+        padding: 30px;
+    }
 }
