--- a/style.css
+++ b/style.css
@@ -65,6 +65,11 @@ body {
     max-width: 400px;
     transition: transform 0.3s ease-in-out;
   }
+  
+  p {
+    transition: color 0.3s ease-in-out;
+  }
+  
   @media screen and (max-width: 768px) {
     .hero img {
       width: 80%;
